--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -136,8 +136,7 @@
       style="margin-bottom: 0px"
     ></div>
     <!-- End ImaIni -->
-
-    </main>
+    <main></main>
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container d-lg-flex py-4">
