--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <section id="services" class="services section-bg">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
-            <h2>SERVICIOS</h2>
+            <h2>Servicios</h2>
           </div>
 
           <div class="row">
@@ -253,7 +253,12 @@
       </section>
       <!-- End Services Section -->
       <!-- ======= Clients Section ======= -->
+      
+
       <section id="clients" class="clients">
+        <div class="section-title" data-aos="fade-up">
+          <h2>Testimonios</h2>
+        </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
             <div class="swiper-wrapper align-items-center">
@@ -322,7 +327,7 @@
       
       <section id="faq" class="faq section-bg">
         <div class="section-title">
-          <h2 data-aos="fade-up">PREGUNTAS FRECUENTES:</h2>
+          <h2 data-aos="fade-up">Preguntas frecuentes</h2>
         </div>
 
         <div class="faq-list">
