Cambio de textos en modulo 1 de Home

--- a/index.html
+++ b/index.html
@@ -216,10 +216,12 @@
                 <div class="icon">
                   <i class="bi bi-activity"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Edición de videos</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  Especial para creadores de
+                  contenido. Ya es hora de
+                  impactar en tus redes
+                  sociales. 
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -233,10 +235,12 @@
                 <div class="icon">
                   <i class="bi bi-broadcast"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Diseño web</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  Una página web es esencial
+                  para establecer tu presencia
+                  en linea y posicionarte en el
+                  mercado.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -250,10 +254,11 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Identidad visual</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  El diseño que tu marca
+                  necesita para reflejar lo que
+                  te hace único.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -267,10 +272,13 @@
                 <div class="icon">
                   <i class="bi bi-bounding-box-circles"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Copywriter</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  La clave que falta para el éxito
+                  de tu empresa. Mensajes
+                  originales y creativos que
+                  dejen una chispa en la mente
+                  de tus clientes
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -284,10 +292,11 @@
                 <div class="icon">
                   <i class="bi bi-calendar4-week"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Redes sociales</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  Potencia, aumenta tu
+                  audiencia y crea una
+                  comunidad fiel en redes.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -301,10 +310,11 @@
                 <div class="icon">
                   <i class="bi bi-chat-square-text"></i>
                 </div>
-                <h3 class="pe-4">Servicio</h3>
+                <h3 class="pe-4">Asesoría y Mentorías</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet
+                  Agenda una reunión con Sofi
+                  y define el camino de la
+                  comunicación de tu proyecto.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
