link contact terminado

--- a/index.html
+++ b/index.html
@@ -834,8 +834,8 @@
               A108 Adam Street <br />
               New York, NY 535022<br />
               United States <br /><br />
-              <strong>Phone:</strong> +1 5589 55488 55<br />
-              <strong>Email:</strong> info@example.com<br />
+              <strong>Phone:</strong> +54 9 3498 44-4635<br />
+              <strong>Email:</strong> magnetica@gmail.com<br />
             </p>
           </div>
         </div>
