cambios de textos

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -498,9 +498,7 @@
       <section class="testimonios-section my-5">
         <h1 data-aos="fade-up" class="testimonios-title">Testimonios</h1>
         <p data-aos="fade-up">
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-          nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-          volutpat. Ut wisi enim ad
+          Queremos agradecerles a todas las personas que ya nos eligieron
         </p>
         <div data-aos="fade-up" class="container text-center">
           <div class="row justify-content-center">
