--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -130,11 +130,8 @@
           >
             <ul class="navbar-nav my-2 mb-lg-0">
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  aria-current="page"
-                  href="https://elmundodesofia.substack.com"
-                  >BLOG</a
+                <a class="nav-link" aria-current="page" href="./index.html"
+                  >HOME</a
                 >
               </li>
               <li class="nav-item dropdown">
