Arreglo de estetica y contenido en modulo 1 de RS

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -185,27 +185,38 @@
         <div class="row">
           <div class="redesSociales-video col-lg-6"></div>
           <div class="redesSociales-info col-lg-6">
-            <p>El servicio</p>
+            <p>Redes sociales</p>
             <h1>
-              <strong class="redesSociales-info-title"
-                >Las redes sociales tus principales aliadas</strong
-              >
+              <strong class="redesSociales-info-title">Tus principales aliadas</strong>
             </h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-              nonummy nibh euismod tincidunt ut laoreet
+              En un mundo repleto de contenido, asegurarte de atraer la
+              mirada del público es esencial:
             </p>
             <div class="redesSociales-info-titles d-flex">
               <div class="col-lg-2 pe-4 pt-2">
                 <div class="circle"></div>
               </div>
               <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
+                <h5><strong>Videos Magnéticos</strong></h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                  Son una forma efectiva de captar la atención de tu audiencia y
+                  diferenciarte de la competencia. Suelen generar más
+                  interacción, lo que te permite construir una comunidad más
+                  activa y fiel.
+                </p>
+              </div>
+            </div>
+            <div class="redesSociales-info-titles d-flex">
+              <div class="col-lg-2 pe-4 pt-2">
+                <div class="circle"></div>
+              </div>
+              <div class="col-lg-10 mb-3">
+                <h5><strong>Delega “Fácil y feliz”</strong></h5>
+                <p>
+                  Delegar tus redes sociales a expertos te permite enfocarte en lo
+                  que haces mejor, ya que nos integramos como parte de su
+                  empresa en el área de publicidad.
                 </p>
               </div>
             </div>
@@ -214,26 +225,11 @@
                 <div class="circle"></div>
               </div>
               <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
+                <h5><strong>Aumenta tu impacto</strong></h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                  Un crecimiento constante de tu audiencia puede impulsar tu
+                  proyecto. Es una inversión en la visibilidad, la credibilidad y el
+                  crecimiento a largo plazo.
                 </p>
               </div>
             </div>
@@ -243,18 +239,20 @@
       <!-- ======= End "Necesitas una web si" section ======= -->
 
       <!-- ======= Landing pages section ======= -->
-      <section class="container packs">
-        <article class="packs-artcl h-100 d-flex row my-5" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-6"></div>
-          <div class="packs-info col-lg-6">
-            <div id="packs-info" class="packs-info">
+      <section class="container packs my-5">
+        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+          <div class="redesSociales-video col-lg-5"></div>
+          <div id="packs-info" class="packs-info col-lg-6">
               <container class="container">
                 <div class="col">
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Pack Mensual</h3>
-                    <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                    <h3 class="packs-info-title pe-4 mb-3">Edición de videos Mensual</h3>
+                    <p class="">
+                      Necesitas una buena calidad de contenido, esa
+                      es una de las razones principales para invertir.
+                      Ahorrá muchísimo tiempo y problemas con un
+                      servicio profesional y desarrollado en el
+                      mercado
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -262,10 +260,10 @@
                   </div>
                   <!-- End packs-info Item -->
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Pack Anual</h3>
-                    <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                    <h3 class="pe-4 mb-3 ">Edicion de videos Anual</h3>
+                    <p class="">
+                      Accedes a un precio reducido por algo de mucho valor.
+                      Eligiendo el pack anual ahorras un 20% de tu inversión por el mismo servicio.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -278,16 +276,17 @@
           </div>
         </article>
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-6"></div>
-          <div class="packs-info col-lg-6">
-            <div id="packs-info" class="packs-info">
+          <div class="redesSociales-video col-lg-5"></div>
+            <div id="packs-info" class="packs-info col-lg-6">
               <container class="container">
                 <div class="col">
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Pack Mensual</h3>
-                    <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                    <h3 class="packs-info-title pe-4">Manejo de RR.SS Mensual</h3>
+                    <p>
+                      Delega el manejo de tu red social favorita.
+                      Desarrollamos un paquete mensual que mejora
+                      y realza la presencia de tu proyecto en las redes
+                      sociales.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -295,10 +294,47 @@
                   </div>
                   <!-- End packs-info Item -->
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Pack Anual</h3>
-                    <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                    <h3 class="pe-4">Manejo de RR.SS Anual</h3>
+                    <p>
+                      Accedé a un descuento abonando el plan Anual.
+                      Nuestros servicios están diseñados para
+                      liberarte de preocupaciones y llevar tu proyecto
+                      al siguiente nivel.
+                    </p>
+                    <a href="#" class="readmore stretched-link"
+                      >Read more <i class="bi bi-arrow-right"></i
+                    ></a>
+                  </div>
+                  <!-- End packs-info Item -->
+                </div>
+              </container>
+            </div>
+          </div>
+        </article>
+        <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
+          <div class="redesSociales-video col-lg-5"></div>
+            <div id="packs-info" class="packs-info col-lg-6">
+              <container class="container">
+                <div class="col">
+                  <div class="packs-info-item position-relative mb-3">
+                    <h3 class="packs-info-title pe-4">Placas para RR.SS Mensual</h3>
+                    <p>
+                      Te brindamos una solución constante. Creamos
+                      un servicio mensual de diseño personalizado
+                      para placas de redes sociales.
+                    </p>
+                    <a href="#" class="readmore stretched-link"
+                      >Read more <i class="bi bi-arrow-right"></i
+                    ></a>
+                  </div>
+                  <!-- End packs-info Item -->
+                  <div class="packs-info-item position-relative mb-3">
+                    <h3 class="pe-4">Placas para RR.SS Anual</h3>
+                    <p>
+                      Accedé a un descuento abonando el plan Anual.
+                      Ideal para las personas comprometidas con el
+                      crecimiento de su proyecto y que quieren llevar
+                      su calidad de diseño a otro nivel.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -312,113 +348,6 @@
         </article>
       </section>
       <!-- ======= End Landing pages section ======= -->
-
-      <!-- ======= Our Services Section ======= -->
-      <section id="services" class="services sections-bg">
-        <div class="container" data-aos="fade-up">
-          <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-item">
-                <img
-                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
-                  alt=""
-                />
-                <div class="service-info">
-                  <h3>Servicio</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Service Item -->
-          </div>
-          <div class="text-center pt-5">
-            <button class="button-cargar">Cargar más productos</button>
-          </div>
-        </div>
-      </section>
-      <!-- End Our Services Section -->
 
       <!-- portfolio slider -->
       <section id="clients" class="clients my-5">
