banners terminados y codigo acomodado

--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -258,12 +258,11 @@
     <main>
       <!-- ======= Banner ======= -->
       <div
-        id="ImaIni"
-        class="d-flex flex-column justify-content-center align-items-center"
+        id="ImaIni-diseñografico"
+        class="ima-ini d-flex flex-column justify-content-center align-items-center"
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
-
       <!-- ======= "Necesitas una web si" section ======= -->
       <section class="container redesSociales d-flex my-5" data-aos="fade-up">
         <div class="row">
