--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
     <main id="main">
       <!-- ======= Banner ======= -->
       <div
-        id="ImaIni"
-        class="d-flex flex-column justify-content-center align-items-center"
+        id="ImaIni-home"
+        class="ima-ini d-flex flex-column justify-content-center align-items-center"
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
@@ -305,10 +305,8 @@
                 <h3 class="pe-4">Edición de videos</h3>
                 <div class="info">
                   <p>
-                    Especial para creadores de
-                    contenido. Ya es hora de
-                    impactar en tus redes
-                    sociales. 
+                    Especial para creadores de contenido. Ya es hora de impactar
+                    en tus redes sociales.
                   </p>
                   <a href="#" class="readmore stretched-link"
                     >Read more <i class="bi bi-arrow-right"></i
@@ -325,10 +323,8 @@
                 </div>
                 <h3 class="pe-4">Diseño web</h3>
                 <p>
-                  Una página web es esencial
-                  para establecer tu presencia
-                  en linea y posicionarte en el
-                  mercado.
+                  Una página web es esencial para establecer tu presencia en
+                  linea y posicionarte en el mercado.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -344,9 +340,8 @@
                 </div>
                 <h3 class="pe-4">Identidad visual</h3>
                 <p>
-                  El diseño que tu marca
-                  necesita para reflejar lo que
-                  te hace único.
+                  El diseño que tu marca necesita para reflejar lo que te hace
+                  único.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -362,11 +357,9 @@
                 </div>
                 <h3 class="pe-4">Copywriter</h3>
                 <p>
-                  La clave que falta para el éxito
-                  de tu empresa. Mensajes
-                  originales y creativos que
-                  dejen una chispa en la mente
-                  de tus clientes
+                  La clave que falta para el éxito de tu empresa. Mensajes
+                  originales y creativos que dejen una chispa en la mente de tus
+                  clientes
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -382,9 +375,8 @@
                 </div>
                 <h3 class="pe-4">Redes sociales</h3>
                 <p>
-                  Potencia, aumenta tu
-                  audiencia y crea una
-                  comunidad fiel en redes.
+                  Potencia, aumenta tu audiencia y crea una comunidad fiel en
+                  redes.
                 </p>
                 <a href="#" class="readmore stretched-link"
                   >Read more <i class="bi bi-arrow-right"></i
@@ -400,8 +392,7 @@
                 </div>
                 <h3 class="pe-4">Asesoría y Mentorías</h3>
                 <p>
-                  Agenda una reunión con Sofi
-                  y define el camino de la
+                  Agenda una reunión con Sofi y define el camino de la
                   comunicación de tu proyecto.
                 </p>
                 <a href="#" class="readmore stretched-link"
@@ -419,7 +410,7 @@
       <div
         id="banner-mid"
         class="d-flex flex-column justify-content-center align-items-center"
-        style="margin-bottom: 0px; background-color: gray;"
+        style="margin-bottom: 0px; background-color: gray"
       ></div>
       <!-- End Banner Section -->
 
