--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -258,8 +258,8 @@
     <main>
       <!-- ======= Banner ======= -->
       <div
-        id="ImaIni"
-        class="d-flex flex-column justify-content-center align-items-center"
+        id="ImaIni-redessociales"
+        class="ima-ini d-flex flex-column justify-content-center align-items-center"
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
