--- a/servicios-web.html
+++ b/servicios-web.html
@@ -259,8 +259,8 @@
     <main>
       <!-- ======= Banner ======= -->
       <div
-        id="ImaIni"
-        class="d-flex flex-column justify-content-center align-items-center"
+        id="ImaIni-diseñoweb"
+        class="ima-ini d-flex flex-column justify-content-center align-items-center"
         style="margin-bottom: 0px"
       ></div>
       <!-- End Banner -->
@@ -283,9 +283,10 @@
                 <h5><strong>Ya no tienes tiempo</strong></h5>
                 <p>
                   Una página web puede ayudarte a automatizar tareas como la
-                  reserva de citas y la recepción de pagos. Además el cliente tiene a su disposición toda la
-                  información que necesita para acceder o comprar sus servicios o productos sin depender
-                  de tu atención.
+                  reserva de citas y la recepción de pagos. Además el cliente
+                  tiene a su disposición toda la información que necesita para
+                  acceder o comprar sus servicios o productos sin depender de tu
+                  atención.
                 </p>
               </div>
             </div>
@@ -296,10 +297,11 @@
               <div class="col-lg-10">
                 <h5><strong>Quieres pasar al siguiente nivel</strong></h5>
                 <p>
-                  En un mundo cada vez más digital, tener una página
-                  web es una inversión a largo plazo, esencial para mantenerse relevante y competitivo en el
-                  mercado actual. Creamos tu propia vidriera digital para que tu comunidad no dependa
-                  solo de las redes sociales.
+                  En un mundo cada vez más digital, tener una página web es una
+                  inversión a largo plazo, esencial para mantenerse relevante y
+                  competitivo en el mercado actual. Creamos tu propia vidriera
+                  digital para que tu comunidad no dependa solo de las redes
+                  sociales.
                 </p>
               </div>
             </div>
@@ -311,8 +313,8 @@
                 <h5><strong>Buscas expandir tu alcance</strong></h5>
                 <p>
                   y quieres atraer un público más amplio. Una página web te
-                  permite expandir tu presencia en línea, llegando a clientes potenciales en diferentes
-                  partes del mundo 24 horas al día
+                  permite expandir tu presencia en línea, llegando a clientes
+                  potenciales en diferentes partes del mundo 24 horas al día
                 </p>
               </div>
             </div>
