cambios de contenido media en SW y RS

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -266,7 +266,9 @@
       <!-- ======= "Necesitas una web si" section ======= -->
       <section class="container redesSociales d-flex my-5" data-aos="fade-up">
         <div class="row">
-          <div class="redesSociales-video col-lg-6"></div>
+          <div class="redesSociales-video col-lg-6">
+            <img src="./assets/img/gif's/redes-sociales.gif" alt="gif de una chica mirando sus redes">
+          </div>
           <div class="redesSociales-info col-lg-6">
             <p>Redes sociales</p>
             <h1>
@@ -324,7 +326,9 @@
       <!-- ======= Landing pages section ======= -->
       <section class="container packs my-5">
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5"></div>
+          <div class="redesSociales-video col-lg-5">
+            <img src="./assets/img/servicios/macbook.png" alt="macbook con un editor abierto" width="100%">
+          </div>
           <div id="packs-info" class="packs-info col-lg-6">
               <container class="container">
                 <div class="col">
@@ -359,7 +363,9 @@
           </div>
         </article>
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5"></div>
+          <div class="redesSociales-video col-lg-5">
+            <img src="./assets/img/servicios/feed.png" alt="collage de fotos de la empresa" width="100%" class="mb-3">
+          </div>
             <div id="packs-info" class="packs-info col-lg-6">
               <container class="container">
                 <div class="col">
@@ -395,7 +401,9 @@
           </div>
         </article>
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5"></div>
+          <div class="redesSociales-video col-lg-5">
+            <img src="./assets/img/servicios/celulares.png" alt="">
+          </div>
             <div id="packs-info" class="packs-info col-lg-6">
               <container class="container">
                 <div class="col">
