--- a/servicios-web.html
+++ b/servicios-web.html
@@ -267,7 +267,9 @@
       <!-- ======= "Necesitas una web si" section ======= -->
       <section class="container redesSociales d-flex my-5" data-aos="fade-up">
         <div class="row">
-          <div class="redesSociales-video col-lg-6"></div>
+          <div class="redesSociales-video col-lg-6">
+            <img src="./assets/img/gif's/servicios-web.gif" alt="imagen de hearvey specter">
+          </div>
           <div class="redesSociales-info col-lg-6">
             <p>Diseño web</p>
             <h1>
@@ -324,16 +326,19 @@
       <!-- ======= Landing pages section ======= -->
       <section class="container packs">
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-5"></div>
+          <div class="redesSociales-video col-lg-5">
+            <img src="./assets/img/servicios/macbook2.png" alt="">
+          </div>
           <div class="packs-info col-lg-6">
             <div id="packs-info" class="packs-info">
               <container class="container">
                 <div class="col">
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Pack Mensual</h3>
+                    <h3 class="packs-info-title pe-4">Landing page</h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                      Tambien conocidas como "Página de aterrizaje"<br>
+                      proporcionan una experiencia enfocada y persuasiva para los visitantes
+                      con el objetivo de convertirlos en sus clientes.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -341,10 +346,10 @@
                   </div>
                   <!-- End packs-info Item -->
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Pack Anual</h3>
+                    <h3 class="pe-4">Standard page</h3>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                      Con una navegacion mas completa, permite que los visitantes exploren
+                      diferentes secciones.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
