cambio js sliders y portfolio multiple

--- a/index.html
+++ b/index.html
@@ -412,6 +412,29 @@
                   </div>
                 </div>
               </div>
+              <div class="swiper-slide">
+                <div class="card px-5">
+                  <p class="card-text">
+                    “Gracias porque me ayudaron a desarrollar la mejor web del
+                    mundo mundial”
+                  </p>
+                  <div class="card-body mt-3">
+                    <img src="assets/img/ejemploimagendeperfil.png" alt="" />
+                    <div class="card-profile">
+                      <h5 class="card-title">
+                        <strong>Sofia Ferreyra</strong>
+                      </h5>
+                      <span class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
