--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -266,29 +266,39 @@
       <!-- ======= "Necesitas una web si" section ======= -->
       <section class="container redesSociales d-flex my-5" data-aos="fade-up">
         <div class="row">
-          <div class="redesSociales-video col-lg-6"></div>
+          <div class="redesSociales-video col-lg-6">
+            <img src="./assets/img/gif's/diseño-grafico.gif" alt="gif de la pelicula 'juego de gemelas'">
+          </div>
           <div class="redesSociales-info col-lg-6">
-            <p>El servicio</p>
+            <p>Diseño Gráfico</p>
             <h1>
-              <strong class="redesSociales-info-title"
-                >Las redes sociales tus principales aliadas</strong
-              >
+              <strong class="redesSociales-info-title">
+                Necesitas una nueva identidad si...
+              </strong>
             </h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-              nonummy nibh euismod tincidunt ut laoreet
-            </p>
             <div class="redesSociales-info-titles d-flex">
               <div class="col-lg-2 pe-4 pt-2">
                 <div class="circle"></div>
               </div>
               <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
+                <h5><strong>No quieres perder el tiempo</strong></h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                  Una identidad visual bien diseñada comunica la personalidad
+                  de tu marca, lo que simplifica la comunicación de tu mensaje a
+                  tus clientes. Trabajar con profesionales va a ahorrarte mucho
+                  tiempo y dinero.
+                </p>
+              </div>
+            </div>
+            <div class="redesSociales-info-titles d-flex">
+              <div class="col-lg-2 pe-4 pt-2">
+                <div class="circle"></div>
+              </div>
+              <div class="col-lg-10 mb-4">
+                <h5><strong>No sabes cómo diferenciarte</strong></h5>
+                <p>
+                  En un mundo lleno de opciones, una identidad visual sólida te
+                  ayudará a destacar y atraer la atención de tus clientes ideales.
                 </p>
               </div>
             </div>
@@ -297,26 +307,10 @@
                 <div class="circle"></div>
               </div>
               <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
+                <h5><strong>Quieres aumentar tus ventas</strong></h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                </p>
-              </div>
-            </div>
-            <div class="redesSociales-info-titles d-flex">
-              <div class="col-lg-2 pe-4 pt-2">
-                <div class="circle"></div>
-              </div>
-              <div class="col-lg-10">
-                <h5><strong>Título acá</strong></h5>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                  diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                  nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                  Una identidad visual de alta calidad puede aumentar el valor
+                  percibido de tus productos o servicios.
                 </p>
               </div>
             </div>
@@ -328,16 +322,19 @@
       <!-- ======= Landing pages section ======= -->
       <section class="container packs">
         <article class="packs-artcl h-100 d-flex row" data-aos="fade-up">
-          <div class="redesSociales-video col-lg-6"></div>
+          <div class="redesSociales-video col-lg-5 pb-5">
+            <img src="./assets/img/servicios/placa.png" height="90%" alt="imagen de una placa sobre la pediatra lucia sabbione">
+          </div>
           <div class="packs-info col-lg-6">
             <div id="packs-info" class="packs-info">
               <container class="container">
                 <div class="col">
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="packs-info-title pe-4">Pack Mensual</h3>
+                    <h3 class="packs-info-title pe-4">Identidad visual Basic</h3>
                     <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                      Un pack indispensable para comenzar tu marca
+                      con una buena base gráfica.
+                      Mirá lo que incluye.
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -345,10 +342,11 @@
                   </div>
                   <!-- End packs-info Item -->
                   <div class="packs-info-item position-relative mb-3">
-                    <h3 class="pe-4">Pack Anual</h3>
+                    <h3 class="pe-4">Identidad visual Magnética</h3>
                     <p class="pb-5">
-                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      sed diam nonummy nibh euismod tincidunt ut laoreet
+                      Podés personalizar el pack con lo que tu marca
+                      necesite, adicionando diferentes elementos y
+                      aplicaciones gráficas para potenciar tu proyecto
                     </p>
                     <a href="#" class="readmore stretched-link"
                       >Read more <i class="bi bi-arrow-right"></i
@@ -374,9 +372,10 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Tarjetas Personales</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Un básico que todos
+                    necesitamos para presentarnos.
                   </p>
                 </div>
               </div>
@@ -390,9 +389,10 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Historias Destacadas</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Detalles que hacen la
+                    diferencia.
                   </p>
                 </div>
               </div>
@@ -406,9 +406,10 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Banners</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Importantes para complementar
+                    el diseño de tu web.
                   </p>
                 </div>
               </div>
@@ -422,9 +423,10 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Catálogos</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Otra forma de presentar tus
+                    productos.
                   </p>
                 </div>
               </div>
@@ -438,9 +440,10 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Folletos</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Especiales para eventos de
+                    todo tipo.
                   </p>
                 </div>
               </div>
@@ -454,9 +457,60 @@
                   alt=""
                 />
                 <div class="service-info">
-                  <h3>Servicio</h3>
+                  <h3>Placas de Redes Sociales</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    Delegá el diseño de tus redes
+                    sociales.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6">
+              <div class="service-item">
+                <img
+                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
+                  alt=""
+                />
+                <div class="service-info">
+                  <h3>Posters</h3>
+                  <p>
+                    Permiten transmitir información
+                    de manera rápida y concisa.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6">
+              <div class="service-item">
+                <img
+                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
+                  alt=""
+                />
+                <div class="service-info">
+                  <h3>Packaging</h3>
+                  <p>
+                    Una forma diferente de
+                    entregar los productos.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6">
+              <div class="service-item">
+                <img
+                  src="https://img.freepik.com/vector-gratis/composicion-isometrica-servicios-nube-grandes-elementos-infraestructura-computacion-nube-conectados-lineas-discontinuas-ilustracion-vectorial_1284-30495.jpg?w=2000"
+                  alt=""
+                />
+                <div class="service-info">
+                  <h3>Papelería empresarial</h3>
+                  <p>
+                    Complementos para empresas.
                   </p>
                 </div>
               </div>
